crates/walrus-codegen/snapshots/lit_string_with_null.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

%String = type { i32, i8* }

@String.lit = global [11 x i8] c"hello\00world"

define %String @main() {
main.entry:
  ret %String { i32 11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @String.lit, i32 0, i32 0) }
}

