crates/walrus-codegen/snapshots/tuple0.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define {} @main() {
main.entry:
  %tuple.alloca = alloca {}, align 8
  %tuple = load {}, {}* %tuple.alloca, align 1
  ret {} %tuple
}

